--- a/Szkolenie/Szkolenie.csproj
+++ b/Szkolenie/Szkolenie.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\NazwaKlasiesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -266,6 +267,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\NazwaKlasies\Create.cshtml" />
+    <Content Include="Views\NazwaKlasies\Delete.cshtml" />
+    <Content Include="Views\NazwaKlasies\Details.cshtml" />
+    <Content Include="Views\NazwaKlasies\Edit.cshtml" />
+    <Content Include="Views\NazwaKlasies\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
