--- a/Szkolenie/Szkolenie.csproj
+++ b/Szkolenie/Szkolenie.csproj
@@ -201,6 +201,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807301305511_InitialCreate.cs" />
+    <Compile Include="Migrations\201807301305511_InitialCreate.Designer.cs">
+      <DependentUpon>201807301305511_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807301314343_newAdres.cs" />
+    <Compile Include="Migrations\201807301314343_newAdres.Designer.cs">
+      <DependentUpon>201807301314343_newAdres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -288,6 +297,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201807301305511_InitialCreate.resx">
+      <DependentUpon>201807301305511_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807301314343_newAdres.resx">
+      <DependentUpon>201807301314343_newAdres.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
