--- a/Szkolenie/Web.config
+++ b/Szkolenie/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Szkolenie-20180730011241.mdf;Initial Catalog=aspnet-Szkolenie-20180730011241;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=mssql5.webio.pl,2401;Initial Catalog=kocyla_krzysiek;Persist Security Info=True;User ID=kocyla_szkolenie;Password=Szkolenie123!"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
