--- a/Szkolenie/Web.config
+++ b/Szkolenie/Web.config
@@ -20,6 +20,13 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network">
+        <network host="smtp.webio.pl" userName="szkolenie@asystent-unijny.pl" password="Szkolenie123!" port="587" enableSsl="false" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <system.web>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6.1"/>
