--- a/Szkolenie/Szkolenie.csproj
+++ b/Szkolenie/Szkolenie.csproj
@@ -214,6 +214,10 @@
     <Compile Include="Migrations\201807310743559_CientMigration.Designer.cs">
       <DependentUpon>201807310743559_CientMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807310836137_CientMigration2.cs" />
+    <Compile Include="Migrations\201807310836137_CientMigration2.Designer.cs">
+      <DependentUpon>201807310836137_CientMigration2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Client.cs" />
@@ -320,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807310743559_CientMigration.resx">
       <DependentUpon>201807310743559_CientMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807310836137_CientMigration2.resx">
+      <DependentUpon>201807310836137_CientMigration2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
